DeveloperOrg/force-app/main/default/objects/Territory_Manager__c/Territory_Manager__c.object-meta.xml
<CustomObject>
    <label>Territory Manager</label>
    <nameField>
        <label>Terrtory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory_Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>