DeveloperOrg/force-app/main/default/objects/Territory_Manager__c/fields/country_code__c.field-meta.xml
<CustomField>
    <fullName>country_code__c</fullName>
    <label>country code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>