DeveloperOrg/force-app/main/default/objects/Territory_Manager__c/fields/state_code__c.field-meta.xml
<CustomField>
    <fullName>state_code__c</fullName>
    <label>state code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>