DeveloperOrg/force-app/main/default/objects/Territory_Manager__c/fields/zip_code__c.field-meta.xml
<CustomField>
    <fullName>zip_code__c</fullName>
    <label>zip code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>